--- a/src/themes/accelerator/components/Header.astro
+++ b/src/themes/accelerator/components/Header.astro
@@ -1,48 +1,53 @@
 ---
 // warning: This file is overwritten by Astro Accelerator
 
-import { PostFiltering, Accelerator } from 'astro-accelerator-utils';
-import type { Frontmatter } from 'astro-accelerator-utils/types/Frontmatter';
-import { SITE } from '@config';
-import { Translations, Lang } from '@util/Languages';
+import { Accelerator } from "astro-accelerator-utils";
+import type { Frontmatter } from "astro-accelerator-utils/types/Frontmatter";
+import { SITE } from "@config";
+import { Translations, Lang } from "@util/Languages";
+import Search from "./Search.astro";
 
 const accelerator = new Accelerator(SITE);
-const stats = new accelerator.statistics('accelerator/components/Header.astro');
+const stats = new accelerator.statistics("accelerator/components/Header.astro");
 stats.start();
 
 // Properties
 type Props = {
   lang: string;
-  frontmatter: Frontmatter
-  headings: { depth: number; slug: string; text: string; }[];
+  frontmatter: Frontmatter;
+  headings: { depth: number; slug: string; text: string }[];
+  showSearch: boolean;
 };
-const { lang } = Astro.props satisfies Props;
+const { lang, showSearch } = Astro.props satisfies Props;
 
 // Language
 const _ = Lang(lang);
 
-// Logic
-const search = accelerator.posts.all().filter(PostFiltering.isSearch).shift() ?? null;
-
 stats.stop();
 ---
+
 <header class="site-header">
-  <a href="#site-nav" data-navigationid="site-nav" class="navigation-icon" title={ _(Translations.header.toggle_menu) }><svg xmlns="http://www.w3.org/2000/svg" 
-    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" 
-    fill="none" stroke-linecap="round" stroke-linejoin="round">
-    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-    <line x1="4" y1="6" x2="20" y2="6" />
-    <line x1="4" y1="12" x2="20" y2="12" />
-    <line x1="4" y1="18" x2="20" y2="18" />
-  </svg></a>
-  <a href={ (SITE.subfolder ?? '') + '/' } class="site-title" translate="no">{ SITE.title }</a>
-  {search != null &&
-  <a href={ accelerator.urlFormatter.formatAddress(search.url) } class="search-icon" title={ _(Translations.header.toggle_search) }><svg xmlns="http://www.w3.org/2000/svg" 
-    width="40" height="40" viewBox="0 0 24 24" stroke-width="1" 
-    fill="none" stroke-linecap="round" stroke-linejoin="round">
-    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-    <circle cx="10" cy="10" r="7" />
-    <line x1="21" y1="21" x2="15" y2="15" />
-  </svg></a>
-  }
+  <a
+    href="#site-nav"
+    data-navigationid="site-nav"
+    class="navigation-icon"
+    title={_(Translations.header.toggle_menu)}
+    ><svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="40"
+      height="40"
+      viewBox="0 0 24 24"
+      stroke-width="1.5"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+      <line x1="4" y1="6" x2="20" y2="6"></line>
+      <line x1="4" y1="12" x2="20" y2="12"></line>
+      <line x1="4" y1="18" x2="20" y2="18"></line>
+    </svg></a
+  >
+
+  {showSearch && <Search lang={lang} />}
 </header>
