--- a/src/themes/accelerator/components/Header.astro
+++ b/src/themes/accelerator/components/Header.astro
@@ -27,6 +27,8 @@ stats.stop();
 ---
 
 <header class="site-header">
+  <a href={ (SITE.subfolder ?? '') + '/' } class="site-title" translate="no">{ SITE.title }</a>
+  <Search lang={ lang } showSearch={ showSearch } />
   <a
     href="#site-nav"
     data-navigationid="site-nav"
@@ -47,7 +49,5 @@ stats.stop();
       <line x1="4" y1="12" x2="20" y2="12"></line>
       <line x1="4" y1="18" x2="20" y2="18"></line>
     </svg></a
-  >
-
-  {showSearch && <Search lang={lang} />}
+  >  
 </header>
