--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -25,6 +25,8 @@
     --aft-block: #F3F5FF;
     --icon-block: #4D71FF;
 
+    --aft-mark: #EEF;
+
     --fore-table-head: #FDFDFE;
     --aft-table-head: #2F3141;
     --fore-table-row-odd: #333;
