Flex shrink added

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -304,6 +304,12 @@ nav.skip-links a:focus {
     text-transform: uppercase;
 }
 
+@media (min-width: 338px) {
+    .site-header .site-title {
+        flex-shrink: 0;
+    }
+}
+
 .site-header .navigation-icon {
     stroke: var(--link-head);
 }
