--- a/src/themes/accelerator/components/Header.astro
+++ b/src/themes/accelerator/components/Header.astro
@@ -6,6 +6,7 @@ import type { Frontmatter } from "astro-accelerator-utils/types/Frontmatter";
 import { SITE } from "@config";
 import { Translations, Lang } from "@util/Languages";
 import Search from "./Search.astro";
+import MobileMenu from "./MobileMenu.astro";
 
 const accelerator = new Accelerator(SITE);
 const stats = new accelerator.statistics("accelerator/components/Header.astro");
@@ -29,25 +30,5 @@ stats.stop();
 <header class="site-header">
   <a href={ (SITE.subfolder ?? '') + '/' } class="site-title" translate="no">{ SITE.title }</a>
   <Search lang={ lang } showSearch={ showSearch } />
-  <a
-    href="#site-nav"
-    data-navigationid="site-nav"
-    class="navigation-icon"
-    title={_(Translations.header.toggle_menu)}
-    ><svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="40"
-      height="40"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-      <line x1="4" y1="6" x2="20" y2="6"></line>
-      <line x1="4" y1="12" x2="20" y2="12"></line>
-      <line x1="4" y1="18" x2="20" y2="18"></line>
-    </svg></a
-  >  
+  <MobileMenu lang={lang} /> 
 </header>
