--- a/src/themes/accelerator/components/Navigation.astro
+++ b/src/themes/accelerator/components/Navigation.astro
@@ -1,14 +1,14 @@
 ---
-// warning: This file is overwritten by Astro Accelerator
-
-import { Accelerator } from 'astro-accelerator-utils';
-import { Translations, Lang } from '@util/Languages';
-import NavigationItem from '@components/NavigationItem.astro';
-import { SITE } from '@config';
-import { menu } from '@data/navigation';
+import { Accelerator } from "astro-accelerator-utils";
+import { Translations, Lang } from "@util/Languages";
+import { getNavigationItems } from "@util/getNavigationItems";
+import NavigationItem from "@components/NavigationItem.astro";
+import { SITE } from "@config";
 
 const accelerator = new Accelerator(SITE);
-const stats = new accelerator.statistics('accelerator/components/Navigation.astro');
+const stats = new accelerator.statistics(
+  "accelerator/components/Navigation.astro"
+);
 stats.start();
 
 // Properties
@@ -22,15 +22,18 @@ const _ = Lang(lang);
 
 // Logic
 const currentUrl = new URL(Astro.request.url);
-const pages = accelerator.navigation.menu(currentUrl, SITE.subfolder, menu);
+const pages = await getNavigationItems(currentUrl, lang);
 
 stats.stop();
 ---
-<nav class="site-nav" id="site-nav" aria-label={ _(Translations.aria.site_navigation) }>
-  <h2 class="site-nav-title">{ _(Translations.navigation.title) }</h2>
+
+<nav
+  class="site-nav"
+  id="site-nav"
+  aria-label={_(Translations.aria.site_navigation)}
+>
+  <h2 class="site-nav-title">{_(Translations.navigation.title)}</h2>
   <ul>
-    {pages.sort((a, b) => a.order - b.order).map((page) => (
-      <NavigationItem lang={ lang } page={ page } />
-    ))}
+    {pages.map((page) => <NavigationItem lang={lang} page={page} />)}
   </ul>
 </nav>
