Moving CSS into Astro components

--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -28,6 +28,8 @@
     --aft-block: #f3f5ff;
     --icon-block: #4d71ff;
 
+    --icon-width: 40px;
+
     --aft-mark: #eef;
 
     --fore-table-head: #fdfdfe;
