--- a/src/themes/accelerator/components/FooterItem.astro
+++ b/src/themes/accelerator/components/FooterItem.astro
@@ -31,3 +31,18 @@ stats.stop();
   </ul>
 </div>
 )}
+<style>
+ul {
+    list-style: none;
+    margin: var(--paragraph-margin) 0;
+}
+
+h2 {
+    margin: var(--paragraph-margin) auto;
+}
+
+a {
+    display: block;
+    padding: 0.5rem 1rem;
+}
+</style>
