--- a/src/themes/accelerator/components/SkipLinks.astro
+++ b/src/themes/accelerator/components/SkipLinks.astro
@@ -7,14 +7,16 @@ import { Accelerator } from 'astro-accelerator-utils';
 import { SITE } from '@config';
 
 const accelerator = new Accelerator(SITE);
-const stats = new accelerator.statistics('accelerator/components/SkipLinks.astro');
+const stats = new accelerator.statistics(
+    'accelerator/components/SkipLinks.astro'
+);
 stats.start();
 
 // Properties
 type Props = {
-  lang: string;
-  frontmatter: Frontmatter
-  headings: { depth: number; slug: string; text: string; }[];
+    lang: string;
+    frontmatter: Frontmatter;
+    headings: { depth: number; slug: string; text: string }[];
 };
 const { lang } = Astro.props satisfies Props;
 
@@ -24,8 +26,41 @@ const _ = Lang(lang);
 // Logic
 stats.stop();
 ---
-<nav class="skip-links" aria-label={ _(Translations.aria.skiplinks) } id="site-top">
-  <a href="#site-nav">{ _(Translations.skiplinks.skip_to_navigation) }</a>
-  <a href="#site-main">{ _(Translations.skiplinks.skip_to_content) }</a>
-  <a href="#site-footer">{ _(Translations.skiplinks.skip_to_footer) }</a>
+
+<nav
+    class="skip-links"
+    aria-label={_(Translations.aria.skiplinks)}
+    id="site-top"
+>
+    <a href="#site-nav">{_(Translations.skiplinks.skip_to_navigation)}</a>
+    <a href="#site-main">{_(Translations.skiplinks.skip_to_content)}</a>
+    <a href="#site-footer">{_(Translations.skiplinks.skip_to_footer)}</a>
 </nav>
+<style>
+    nav {
+        position: absolute;
+    }
+
+    a {
+        background-color: var(--aft);
+        clip: rect(0 0 0 0);
+        display: inline-block;
+        height: 1px;
+        margin: -1px;
+        min-width: 20vw;
+        overflow: hidden;
+        padding: 1rem;
+        position: absolute;
+        text-align: center;
+        width: 1px;
+        z-index: 15;
+    }
+
+    a:focus {
+        clip: auto;
+        height: auto;
+        margin: 0.2em;
+        overflow: visible;
+        width: auto;
+    }
+</style>
