--- a/src/themes/accelerator/components/AuthorsMini.astro
+++ b/src/themes/accelerator/components/AuthorsMini.astro
@@ -41,3 +41,36 @@ stats.stop();
   </div>
 </div>
 }
+<style>
+  .post-meta {
+    display: flex;
+    align-items: top;
+}
+
+.author-image {
+    width: 80px;
+    height: 80px;
+    margin-right: 1rem;
+    object-fit: cover;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    max-width: 150px;
+    float: right;
+}
+
+
+.author-info {
+    display: flex;
+    align-items: center;
+}
+
+time[itemprop='datePublished'] {
+    display: inline-block;
+}
+
+time[itemprop='dateModified'] {
+    font-style: italic;
+    display: block;
+}
+</style>
