Revert "Moving CSS into Astro components"
This reverts commit eb085c657dd28ed1c0b860d494bb708dc811218e.

--- a/src/themes/accelerator/components/Breadcrumbs.astro
+++ b/src/themes/accelerator/components/Breadcrumbs.astro
@@ -7,17 +7,15 @@ import { SITE } from '@config';
 import { Translations, Lang } from '@util/Languages';
 
 const accelerator = new Accelerator(SITE);
-const stats = new accelerator.statistics(
-    'accelerator/components/Breadcrumbs.astro'
-);
+const stats = new accelerator.statistics('accelerator/components/Breadcrumbs.astro');
 stats.start();
 
 // Properties
 type Props = {
-    lang: string;
-    frontmatter: Frontmatter;
-    headings: { depth: number; slug: string; text: string }[];
-    breadcrumbs?: { url: string; title: string; ariaCurrent?: string }[] | null;
+  lang: string;
+  frontmatter: Frontmatter
+  headings: { depth: number; slug: string; text: string; }[];
+  breadcrumbs?: { url: string; title: string; ariaCurrent?: string; }[] | null;
 };
 const { lang, breadcrumbs } = Astro.props satisfies Props;
 
@@ -26,14 +24,10 @@ const _ = Lang(lang);
 
 // Logic
 const currentUrl = new URL(Astro.request.url);
-const navPages = accelerator.navigation.breadcrumbs(
-    currentUrl,
-    SITE.subfolder,
-    breadcrumbs?.length ?? 0
-);
+const navPages = accelerator.navigation.breadcrumbs(currentUrl, SITE.subfolder, breadcrumbs?.length ?? 0);
 
 for (let i = 0; i < navPages.length; i++) {
-    navPages[i].title = navPages[i].section || navPages[i].title;
+  navPages[i].title = navPages[i].section || navPages[i].title;
 }
 
 // The last breadcrumb should use the full name
@@ -43,72 +37,19 @@ let metaIndex = navPages.length;
 
 stats.stop();
 ---
-
-<nav class="site-breadcrumbs" aria-label={_(Translations.aria.breadcrumbs)}>
-    <ol vocab="http://schema.org/" typeof="BreadcrumbList">
-    {
-        navPages.map((page, index) => (
-            <li property="itemListElement" typeof="ListItem">
-                <meta property="position" content={index.toString()} />
-                <a
-                    property="item"
-                    typeof="WebPage"
-                    href={accelerator.urlFormatter.formatAddress(page.url)}
-                    aria-current={page.ariaCurrent}
-                    rel={page.rel}
-                ><span property="name">{page.title}</span></a>
-            </li>
-        ))
-    }
-    {
-        breadcrumbs &&
-            breadcrumbs.map((crumb) => (
-                <li property="itemListElement" typeof="ListItem">
-                    <meta property="position" content={(metaIndex++).toString()} />
-                    <a
-                        property="item"
-                        typeof="WebPage"
-                        href={accelerator.urlFormatter.formatAddress(
-                            crumb.url
-                        )}
-                        aria-current={crumb.ariaCurrent}
-                    ><span property="name">{crumb.title}</span></a>
-                </li>
-            ))
-    }
-    </ol>
+<nav class="site-breadcrumbs" aria-label={ _(Translations.aria.breadcrumbs) }>
+  <ol vocab="http://schema.org/" typeof="BreadcrumbList">
+    {navPages.map((page, index) => (
+    <li property="itemListElement" typeof="ListItem">
+      <meta property="position" content={ index.toString() } />
+      <a property="item" typeof="WebPage" href={ accelerator.urlFormatter.formatAddress(page.url) } aria-current={ page.ariaCurrent } rel={ page.rel }><span property="name">{ page.title }</span></a>
+    </li>
+    ))}
+    {breadcrumbs && breadcrumbs.map( (crumb) => (
+    <li property="itemListElement" typeof="ListItem">
+      <meta property="position" content={ (metaIndex++).toString() } />
+      <a property="item" typeof="WebPage" href={ accelerator.urlFormatter.formatAddress(crumb.url) } aria-current={ crumb.ariaCurrent }><span property="name">{ crumb.title }</span></a>
+    </li>
+    ))}
+  </ol>
 </nav>
-<style>
-    ol {
-        background-color: var(--aft-breadcrumb);
-        color: var(--fore-breadcrumb);
-        font-size: 0.8rem;
-        padding: 0 1em;
-    }
-
-    li {
-        display: inline;
-        padding: 0.2em;
-    }
-
-    li::before {
-        content: '>';
-        margin-inline-end: 0.3em;
-    }
-
-    li:first-child::before {
-        content: '';
-        margin-inline-end: 0;
-    }
-
-    a[aria-current] {
-        color: var(--fore);
-        text-decoration: none;
-    }
-
-    @media (max-width: 860px) {
-        ol {
-            text-align: center;
-        }
-    }
-</style>
